konsear-apache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konsear-app
  labels:
    app: konsear
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: konsear
  template:
    metadata:
      labels:
        app: konsear
    spec:
      containers:
      - name: konsear
        image: acrncpltest.azurecr.io/konsear/php:v5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
