konsear-phpmyadmin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: konsear-myadmin
  labels:
    name: konsear-myadmin
spec:
  containers:
    - name: konsear-phpmyadmin
      image: phpmyadmin/phpmyadmin
      ports:
        - containerPort: 80
          name: konsear-myadmin
