stateful.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  replicas: 3
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: acrncpltest.azurecr.io/mysql:5.7
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            command: ["mysql", "-h", "10.240.0.36", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
#      - name: xtrabackup
#        image: gcr.io/google-samples/xtrabackup:1.0
#        ports:
#        - name: xtrabackup
#          containerPort: 3307
#        command:
#        - bash
#        - "-c"
#        - |
#          set -ex
#          cd /var/lib/mysql
#
#          # Determine binlog position of cloned data, if any.
#          if [[ -f xtrabackup_slave_info ]]; then
#            # XtraBackup already generated a partial "CHANGE MASTER TO" query
#                 # because we're cloning from an existing slave.
#            mv xtrabackup_slave_info change_master_to.sql.in
#            # Ignore xtrabackup_binlog_info in this case (it's useless).
#            rm -f xtrabackup_binlog_info
#          elif [[ -f xtrabackup_binlog_info ]]; then
#            # We're cloning directly from master. Parse binlog position.
#            [[ `cat xtrabackup_binlog_info` =~ ^(.*?)[[:space:]]+(.*?)$ ]] || exit 1
#            rm xtrabackup_binlog_info
#            echo "CHANGE MASTER TO MASTER_LOG_FILE='${BASH_REMATCH[1]}',\
#                  MASTER_LOG_POS=${BASH_REMATCH[2]}" > change_master_to.sql.in
#          fi
#
#          # Check if we need to complete a clone by starting replication.
#          if [[ -f change_master_to.sql.in ]]; then
#            echo "Waiting for mysqld to be ready (accepting connections)"
#            until mysql -h 127.0.0.1 -e "SELECT 1"; do sleep 1; done
#
#            echo "Initializing replication from clone position"
#            # In case of container restart, attempt this at-most-once.
#            mv change_master_to.sql.in change_master_to.sql.orig
#            mysql -h 127.0.0.1 <<EOF
#          $(<change_master_to.sql.orig),
#            MASTER_HOST='mysql-0.mysql',
#            MASTER_USER='root',
#            MASTER_PASSWORD='',
#            MASTER_CONNECT_RETRY=10;
#          START SLAVE;
#          EOF
#          fi
#
#          # Start a server to send backups when requested by peers.
#          exec ncat --listen --keep-open --send-only --max-conns=1 3307 -c \
#            "xtrabackup --backup --slave-info --stream=xbstream --host=127.0.0.1 --user=root"
#        volumeMounts:
#        - name: data
#          mountPath: /var/lib/mysql
#          subPath: mysql
#        - name: conf
#          mountPath: /etc/mysql/conf.d
#        resources:
#          requests:
#            cpu: 100m
#            memory: 100Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: konsear-azure-managed-disk
      - name: config-map
        configMap:
          name: mysql
