konsear-apache_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: konsear-svc
  labels:
    run: konsear
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: konsear
