konsear-mysql_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: konsear-mysql-svc
  labels: 
    app: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: konsear
