konsear-phpmyadmin_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: konsear
  name: konsear-admin-svc
spec:
  type: NodePort
  ports:
    - nodePort: 30096
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: konsear-myadmin
