mysql.yaml
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: datalayer-pvc
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: konsear-mysql-svc
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mysql

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: datalayer-svc
#  labels:
#    app: myapplication
#spec:
#  ports:
#  - port: 80
#    name: dbadmin
#  clusterIP: None
#  selector:
#    app: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: "konsear-mysql-svc"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
    - name: init
      image: "k8s.gcr.io/busybox"
      command: ["/bin/sh","-c","ls -l /var/lib/mysql"]
      volumeMounts:
      - name: mysql
        mountPath: "/var/lib/mysql"
        subPath: mysql        
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: acrncpltest.azurecr.io/mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: database-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: database-pv
        persistentVolumeClaim:
          claimName: konsear-azure-managed-disk
