ncpl-phpmyadmin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
  namespace: ncpl
spec:
  backend:
    serviceName: phpmyadmin-service
    servicePort: 80
